Moqui Framework Release Notes

===========================================================================
Release 1.3.2 - Date TBD
===========================================================================

Moqui Framework 1.3.1 is a minor new feature and bug fix release.

New Features:

- Added econdition.@or-null attribute to make the condition an or between
  the specified condition and null

Bug Fixes:


===========================================================================
Release 1.3.1 - 20 Oct 2013
===========================================================================

Moqui Framework 1.3.1 is a minor new feature, bug fix, and performance
enhancement release.

New Features:

- Performance improvements based on profiling (tested screens run
  around 1.3 to 2 times as fast)
- form-list and section-iterate automatically add *_index and
  *_has_next context fields following the pattern used in Freemarker
- formDisplayOnly parameter (or context value) to make the form render as
  display-only (read-only)
- dynamic and static layouts
  - static layout uses entire browser width and is CSS based
  - dynamic layout uses jQuery Layout plugin and supports closing,
    resizing, fixed header/footer, separate scrolling left/right, etc
- popup menus are in the header to save space and for easier layout
- set action inside form field sub-elements and widget-template-include for
  parameterized widget-template definitions
- XML Form pass through of matches (regexp) validation from service
- Added ServiceTrigger entity to call a service when the record is created;
  useful for triggering data setup services on data load and so on
- The loadData execution uses anonymous user for authc and allows any authz
  for services triggered on data load

Bug Fixes:

- Fixed extraneous close script tags in screen/form HTML output
- Fixed right/east container-panel field name so size, etc settings apply
- Fixed calls to startFormListRow that were missing new parameters added