@@ -11,6 +11,9 @@ New Features:
 
 - Added econdition.@or-null attribute to make the condition an or between
   the specified condition and null
+- Screen form-single forms automatically add a "_formMap" field to the
+  context with the Map used for the form; useful for reused forms that may
+  specify different form-single.@map values
 
 Bug Fixes:
 
